# r3-app-poc

./: README.md  main.py  pyproject.toml
app/: __init__.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  app_state.py  models.py  playback_controller.py  signals.py
app/media/: __init__.py  gstreamer_camera_source.py  ndi_receiver.py  pipeline_manager.py  preview_output.py  recorder.py  replay_buffer.py  source_factory.py  source_interface.py  test_source.py
app/storage/: __init__.py  file_manager.py  metadata_db.py  session_manager.py
app/ui/: __init__.py  controls_widget.py  main_window.py  status_bar_widget.py  video_widget.py
tests/: test_playback_controller.py  test_replay_store.py  test_source_factory.py  test_test_source.py
