[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "r3-app-poc"
version = "0.1.0"
description = "Windows desktop proof of concept for live sports video replay."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.12",
    "PySide6>=6.7",
]

[project.optional-dependencies]
media = [
    "PyGObject>=3.48",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
